# Email-Inbox-Agent---Doo-Made

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  agents.py  cleanup_labels.py  config.py  gmail_client.py  main.py  outlook_client.py  setup_wizard.py  tools.py  workflows.py
scripts/: first_run_mac.sh  first_run_windows.ps1  run_mac.sh  run_windows.ps1  send_stress_test_emails.py
